SERVER-48179 Allow transition to SECONDARY at the end of rollback even it was changed to REMOVED.